// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <div
        class="sc-lmoMRL kywwk"
      >
        <input
          class="sc-hBEYos hKnQgj"
          id="textField"
          name="name"
          type="text"
          value="test"
        />
      </div>
      <span
        class="sc-kstrdz hYtgrW"
      >
        Bad name
      </span>
    </div>
  </form>
</div>
`;

exports[`<TextField /> matches snapshot 1`] = `
<input
  class="sc-hBEYos RGiG"
  id="textField"
  name="name"
  type="text"
  value=""
/>
`;

exports[`<TextField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <label
        for="name"
      >
        Test*
      </label>
      <div
        class="sc-lmoMRL kywwk"
      >
        <input
          class="sc-hBEYos hKnQgj"
          id="textField"
          label="Test"
          name="name"
          required=""
          type="text"
          value=""
        />
      </div>
      <span
        class="sc-kstrdz hYtgrW"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<TextField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <label
        for="name"
      >
        Test
      </label>
      <div
        class="sc-lmoMRL kywwk"
      >
        <input
          class="sc-hBEYos RGiG"
          id="textField"
          label="Test"
          name="name"
          type="text"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;
